--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+bleps = { git = "https://github.com/bjoernQ/bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", package = "bleps" }
+bleps-macros = { git = "https://github.com/bjoernQ/bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", package = "bleps-macros" }
 hal = { package = "esp32-hal", version = "0.15.0" }
 esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-println = { version = "0.6.0", features = ["esp32","log"] }
 log = { version = "0.4.18" }
-esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "fbb8417", features = ["esp32", "ble"] }
+esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "16afb0f", features = ["esp32", "ble"] }
 smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
 embedded-svc = { version = "0.25.0", default-features = false, features = [] }
 embedded-io = "0.4.0"
@@ -18,6 +20,7 @@ heapless = { version = "0.7.14", default-features = false }
 hx711 = "0.6.0"
 nb = "1.1.0"
 embedded-hal = { version = "0.2.7", features = ["unproven"] }
+uuid = { version = "1.4.1", features = [], default-features = false }
 
 [profile.dev.package.esp-wifi]
 opt-level = 3
