Fight through more errors

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,14 +1,10 @@
 [target.xtensa-esp32-none-elf]
-runner = "espflash flash --monitor"
-
+runner = "espflash flash --monitor --chip esp32"
 
 [env]
 ESP_LOG="INFO"
 [build]
 rustflags = [
-  "-C", "link-arg=-Tlinkall.x",
-"-C", "link-arg=-Trom_functions.x",
-
   "-C", "link-arg=-nostartfiles",
 ]
 
