--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ hal = { package = "esp-hal", version = "1.0", features = ["esp32", "log-04", "un
 esp-rtos = { version = "0.2.0", features = [
   "esp-alloc",
   "esp-radio",
+  "embassy",
   "esp32",
   "log-04",
 ] }
@@ -18,11 +19,6 @@ esp-rtos = { version = "0.2.0", features = [
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
 
 log                    = "0.4.27"
-
-bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
-  "async",
-  "macros",
-] }
 
 critical-section = "1.2.0"
 
@@ -45,6 +41,18 @@ esp-radio = { version = "0.17.0", features = [
   "unstable",
 ] }
 
+embassy-executor = "0.9.0"
+embassy-futures = "0.1"
+embassy-sync = "0.7"
+embassy-time = "0.5.0"
+static_cell = "2.1.1"
+
+
+trouble-host = { version = "0.5.0", features = [
+  "default-packet-pool-mtu-255",
+    "derive",
+    "scan",
+] }
 # smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
 # embedded-svc = { version = "0.25.3", default-features = false, features = [] }
 # embedded-io = "0.4.0"
